@@ -242,3 +242,6 @@ usr/lib32/libreadline.so
 lib32/libhistory.so.6
 lib32/libhistory.so.6.2
 usr/lib32/libhistory.so
+usr/lib32/libmng.so
+usr/lib32/libmng.so.1
+usr/lib32/libmng.so.1.0.0
