@@ -1,6 +1,13 @@
 # ChangeLog for app-emulation/emul-linux-x86-baselibs
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.173 2014/01/24 11:59:24 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.174 2014/01/27 12:50:54 ssuominen Exp $
+
+*emul-linux-x86-baselibs-20131008-r10 (27 Jan 2014)
+
+  27 Jan 2014; Samuli Suominen <ssuominen@gentoo.org>
+  +emul-linux-x86-baselibs-20131008-r10.ebuild, files/remove-native:
+  Remove libmng.so.1* because media-libs/libmng was converted to autotools-
+  multilib.eclass
 
 *emul-linux-x86-baselibs-20131008-r9 (24 Jan 2014)
 
